Bug 519444: [9] Add --add-exports support in IDE
Change-Id: I0e72435e29a38bf615ea76dd9e2159039767dc67